tests/snapshots/yaml_suite_snapshots__yaml_suite_DK3J_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- >\n  line1 # no comment line3\n"
  from: "@perlpunk"
  json: "\"line1 # no comment line3\\n\"\n"
  name: Zero indented block scalar with line that looks like a comment
  tags: comment folded scalar
  tree: "+STR\n +DOC ---\n  =VAL >line1 # no comment line3\\n\n -DOC\n-STR\n"
  yaml: "--- >\nline1\n# no comment\nline3\n"
