tests/snapshots/yaml_suite_snapshots__yaml_suite_DK4H_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Implicit key followed by newline
  tags: error flow mapping sequence
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :key\n"
  yaml: "---\n[ key\n  : value ]\n"
