tests/snapshots/yaml_suite_snapshots__yaml_suite_DK95_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Tabs that look like indenta…
  from: "@ingydotnet"
  tags: indent whitespace
  yaml: "foo:\n ———»bar\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :…"
  json: "{\n  \"foo\" : \"bar\"\n}\n"
  emit: "---\nfoo: bar\n"
- yaml: "foo: 1\n————»\nbar: 2\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :…"
  json: "{\n  \"foo\" : 1,\n  \"bar\" : 2…"
  emit: "---\nfoo: 1\nbar: 2\n"
- yaml: "foo: \"bar\n ———» ——» baz ——…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL …"
  json: "{\n  \"foo\" : \"bar baz \\t \\t…"
  emit: "---\nfoo: \"bar baz \\t \\t \"\n"
# 6 more items
