tests/snapshots/yaml_suite_snapshots__yaml_suite_DMG6_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Wrong indendation in Map
  from: "@perlpunk"
  tags: error mapping indent
  fail: true
  yaml: "key:\n  ok: 1\n wrong: 2\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +MAP\n    =VAL :ok\n    =VAL :1\n   -MAP\n"
