tests/snapshots/yaml_suite_snapshots__yaml_suite_DMG6_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Wrong indendation in Map
  tags: error mapping indent
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +MAP\n    =VAL :ok\n    =VAL :1\n   -MAP\n"
  yaml: "key:\n  ok: 1\n wrong: 2\n"
